--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
 <a href="divVariations.html">[ Div element -Variations]</a><br>
 <h4>----E------</h4>
 <a href="externalCss.html">[ External CSS ]</a><br>
+<a href="emoji.html">[ Emoji ]</a><br>
 <h4>----F------</h4>
 <a href="favicon.html">[ Favicon ]</a><br>
 <a href="fonts.html">[ Fonts ]</a><br>
 <a href="htmlformatting.html">[ Formatting ]</a><br>
 <a href="fontsize.html">[ Font Size ]</a><br>
 <a href="filepath.html">[ File Path ]</a><br>
+<a href="forms.html">[ Forms ]</a><br>
 <h4>----H------</h4>
 <a href="Head.html">[ Head element ]</a><br>
 <a href="heading.html">[ Heading ]</a><br>
