formattributes/formelements examples

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <a href="fontsize.html">[ Font Size ]</a><br>
 <a href="filepath.html">[ File Path ]</a><br>
 <a href="forms.html">[ Forms ]</a><br>
+<a href="formattributes.html">[ Form attribute ]</a><br>
+<a href="formelements.html">[ Form Elements ]</a><br>
 <h4>----H------</h4>
 <a href="Head.html">[ Head element ]</a><br>
 <a href="heading.html">[ Heading ]</a><br>
