form input type elements

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <a href="forms.html">[ Forms ]</a><br>
 <a href="formattributes.html">[ Form attribute ]</a><br>
 <a href="formelements.html">[ Form Elements ]</a><br>
+<a href="forminputypeelements.html">[ Form Input Type Elements ]</a><br>
 <h4>----H------</h4>
 <a href="Head.html">[ Head element ]</a><br>
 <a href="heading.html">[ Heading ]</a><br>
