--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <a href="formattributes.html">[ Form attribute ]</a><br>
 <a href="formelements.html">[ Form Elements ]</a><br>
 <a href="forminputypeelements.html">[ Form Input Type Elements ]</a><br>
+<a href="htmlinputattributes.html">[ Form Input Type Attributes ]</a><br>
+<a href="InputFormAttributes.html">[ Form Input Form Attributes ]</a><br>
 <h4>----H------</h4>
 <a href="Head.html">[ Head element ]</a><br>
 <a href="heading.html">[ Heading ]</a><br>
