video/canvas/svg

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <a href="csspadding.html">[ CSS - Padding ]</a><br>
 <a href="class.html">[ Class ]</a><br>
 <a href="computerCodeElements.html">[ Computer Code Elements ]</a><br>
+<a href="canvas.html">[ Canvas Graphics ]</a><br>
 <h4>----D------</h4>
 <a href="dottedTableborders.html">[ Dotted Table Borders ]</a><br>
 <a href="div.html">[ Div element ]</a><br>
@@ -96,6 +97,7 @@
 <a href="style.html">[ Styles ]</a><br>
 <a href="span.html">[ Span ]</a><br>
 <a href="semantics.html">[ Semantics ]</a><br>
+<a href="svg.html">[ SVG ]</a><br>
 <h4>----T------</h4>
 <a href="tables.html">[ Tables ]</a><br>
 <a href="tablesizes.html">[ Table Size ]</a><br>
@@ -121,7 +123,8 @@
 <a href="textalign.html">[ Text Align ]</a><br>
 <a href="textcolor.html">[ Text Color ]</a><br>
 <a href="txtcolor.html">[ Text Color ]</a><br>
-
+<h4>----V------</h4>
+<a href="Video.html">[ Video ]</a><br>
 </body>
 </html>
 
