drag and drop/geolocation/youtube/sse/HTML worker/webstorage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h2>HTML Tutorial</h2>
 <h4>----A------</h4>
 <a href="attributes.html">[ Attributes ]</a><br>
+<a href="Audio.html">[ Audio ]</a><br>
 <h4>----B------</h4>
 <a href="Background.html">[ Background color on Body ]</a><br>
 <a href="background1.html">[ Background color on Elements ]</a><br>
@@ -29,6 +30,7 @@
 <a href="dottedTableborders.html">[ Dotted Table Borders ]</a><br>
 <a href="div.html">[ Div element ]</a><br>
 <a href="divVariations.html">[ Div element -Variations]</a><br>
+<a href="DragAndDrop.html">[ Drag and Drop ]</a><br>
 <h4>----E------</h4>
 <a href="externalCss.html">[ External CSS ]</a><br>
 <a href="emoji.html">[ Emoji ]</a><br>
@@ -44,6 +46,10 @@
 <a href="forminputypeelements.html">[ Form Input Type Elements ]</a><br>
 <a href="htmlinputattributes.html">[ Form Input Type Attributes ]</a><br>
 <a href="InputFormAttributes.html">[ Form Input Form Attributes ]</a><br>
+<h4>----G------</h4>
+<a href="Geolocation.html">[ Geo Location example ]</a><br>
+<a href="geolocationWithErrorhandling.html">[ Geo Location With Error handling ]</a><br>
+<a href="geolocationWatchPosition.html">[ Geo Location Watch Position ]</a><br>
 <h4>----H------</h4>
 <a href="Head.html">[ Head element ]</a><br>
 <a href="heading.html">[ Heading ]</a><br>
@@ -84,6 +90,7 @@
 <a href="paragraph.html">[ Paragraph ]</a><br>
 <a href="picture.html">[ Picture Element ]</a><br>
 <a href="pre.html">[ Pre ]</a><br>
+<a href="plugin.html">[ Plugins ]</a><br>
 <h4>----Q------</h4>
 <a href="htmlquotationcitation.html">[ Quotation and citation ]</a><br>
 <h4>----R------</h4>
@@ -125,6 +132,11 @@
 <a href="txtcolor.html">[ Text Color ]</a><br>
 <h4>----V------</h4>
 <a href="Video.html">[ Video ]</a><br>
+<h4>----W------</h4>
+<a href="WebStorage.html">[ Web Storage ]</a><br>
+<a href="Webworker.html">[ Web Worker ]</a><br>
+<h4>----Y------</h4>
+<a href="youtube.html">[ Youtube ]</a><br>
 </body>
 </html>
 
